# radiomics

./: .gitignore  README.md  RabbitMQ_messenger.py  config.yaml  docker-compose.yml  dockerfile  justfile  main_radiomics.py  pyproject.toml  requirements.txt  run_integration.py
messages/: message1.json
radiomics/: PostgresInterface.py  RabbitMQ_messenger.py  config_handler.py  consumer.py  global_var.py  main.py  main_radiomics.py  radiomics_calculator.py  radiomics_results_postgress.py  xnat_sender.py
radiomics_results/: radiomics_results_PYTIM05
tests/: conftest.py
tests/integration/: test_pipeline.py
