[project]
name = "radiomics"
version = "0.1.0"
description = "Radiomics pipeline consumer"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy",
    "pyyaml",
    "pika",
    "psycopg2-binary",
    "requests",
    "pydicom",
]

[project.optional-dependencies]
runtime = [
    "pyradiomics",
    "platipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["radiomics"]

[tool.ruff]
line-length = 120
target-version = "py310"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Trailing comma — conflicts with formatter
    "ISC001",  # Implicit string concat — conflicts with formatter
    "D203",    # One blank line before class docstring — conflicts with D211
    "D213",    # Multi-line docstring on second line — conflicts with D212
    "E501",    # Line length regulated by formatter
    "TD002",   # Missing TODO author
    "TD003",   # Missing TODO issue link
    "TRY003",  # Long exception messages
    "SIM102",  # Nested if
    "SIM108",  # Ternary operator
    # Pragmatic ignores for existing codebase
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "ANN",     # Type annotations — too invasive for existing code
    "N",       # Naming — medical naming conventions used throughout
    "EM",      # Exception message formatting
    "FBT",     # Boolean trap — patterns used throughout
    "PLR",     # Pylint refactoring rules
    "C901",    # Complexity limit
    "TRY002",  # raise Exception — common pattern
    "DTZ",     # Datetime timezone — naive datetimes intentional
    "BLE001",  # Broad exception catches are intentional for robustness
    "TRY301",  # Abstract raise to inner function
    "SLF001",  # Private member access — intentional in some places
    "S608",    # SQL injection — internal ORM with trusted inputs
    "S105",    # Hardcoded password — config defaults
    "S104",    # Binding to all interfaces
    "D205",    # 1 blank line required between summary line and description
    "D415",    # First line should end with period
    "ARG001",  # Unused argument — callback signatures require fixed args
    "ARG002",  # Unused method argument — callback signatures require fixed args
    "INP001",  # Implicit namespace package
    "S113",    # Requests call without timeout — intentional for internal services
    "PERF203", # try-except in loop — acceptable pattern
    "TRY300",  # Move to else block — style preference
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["radiomics"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
unresolved-import = "warn"
unused-ignore-comment = "warn"
invalid-return-type = "warn"
invalid-argument-type = "warn"
division-by-zero = "error"
redundant-cast = "warn"
invalid-method-override = "warn"
not-subscriptable = "warn"
call-non-callable = "warn"
unknown-argument = "warn"
unresolved-attribute = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring real DICOM data",
]

[dependency-groups]
dev = [
    "ty>=0.0.20",
    "pytest>=8.0",
    "pre-commit>=4.5.1",
]
test = [
    { include-group = "dev" },
    "pyradiomics @ git+https://github.com/AIM-Harvard/pyradiomics.git",
    "platipy",
]
